--- a/omod/src/main/webapp/resources/htmlforms/hiv/hivClinicalEncounterAddendum.html
+++ b/omod/src/main/webapp/resources/htmlforms/hiv/hivClinicalEncounterAddendum.html
@@ -14,31 +14,31 @@
 <htmlform>
 
 	<script type="text/javascript">
-        var pAge;
-        jq(document).ready(function(){
-            pAge = parseInt('<lookup expression="patient.age"/>');
-            if (pAge &gt; 15) {
-                whoChild.style.display='none';
-            }
-            if (pAge &lt; 15) {
-                whoAdult.style.display='none';
-            }
-            beforeSubmit.push(function() {
-                var returnDate = new Date(getValue('returnVisitDate.value')).getTime();
-                var encounterDate = new Date(getValue('encounter-date.value')).getTime();
-                var encouterDateValue = new Date(getValue('encounter-date.value'));
-                var fourMonthsFromEncounterDate = encouterDateValue.setDate(encouterDateValue.getDate() + 120);
-                if (returnDate &lt; encounterDate)  {
-                    getField('returnVisitDate.error').html('Return Visit date should be after encounter date').show();
-                    return false;
-                }
+		var pAge;
+		jq(document).ready(function(){
+			pAge = parseInt('<lookup expression="patient.age"/>');
+			if (pAge &gt; 15) {
+				whoChild.style.display='none';
+			}
+			if (pAge &lt; 15) {
+				whoAdult.style.display='none';
+			}
+			beforeSubmit.push(function() {
+				var returnDate = new Date(getValue('returnVisitDate.value')).getTime();
+				var encounterDate = new Date(getValue('encounter-date.value')).getTime();
+				var encouterDateValue = new Date(getValue('encounter-date.value'));
+				var fourMonthsFromEncounterDate = encouterDateValue.setDate(encouterDateValue.getDate() + 120);
+				if (returnDate &lt; encounterDate)  {
+					getField('returnVisitDate.error').html('Return Visit date should be after encounter date').show();
+					return false;
+				}
 
-                if (returnDate &gt; fourMonthsFromEncounterDate) {
-                    alert('Return Visit date is more than four months from Encounter Date');
-                }
-                return true;
-            });
-        });
+				if (returnDate &gt; fourMonthsFromEncounterDate) {
+					alert('Return Visit date is more than four months from Encounter Date');
+				}
+				return true;
+			});
+		});
 	</script>
 
 	<div class="ke-form-header">
@@ -63,26 +63,17 @@
 								<td>Reaction</td>
 								<td>Grading</td>
 								<td>Causative agent</td>
-								<td>Action taken*</td>  <!-- pw.Greencard additions action taken missing question id -->
 							</tr>
 							<repeat>
 								<template>
-									<obsgroup groupingConceptId="121764AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA">
+									<obsgroup groupingConceptId="160647AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA">
 										<tr>
 											<td><obs conceptId="160753AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA" labelText=" " /></td>
 											<td><obs conceptId="160644AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA" labelText=" " /></td>
-											<td><obs conceptId="160759AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"  answerConceptIds="160754AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,160755AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,160756AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,160758AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,1067AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA" answerLabels="Mild,Moderate,Severe,Fatal,Unknown" /></td>
+											<td><obs conceptId="160759AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"  answerConceptIds="160754AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,160755AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,160756AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,160757AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,160758AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA" answerLabels="Mild,Moderate,Severe,Fatal,Unknown" /></td>
 											<td><obs conceptId="160643AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA" style="autocomplete" answerClasses="Drug" labelText=" "  /></td>
-											<td>
-												<obs conceptId="1255AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"
-													 answerConceptIds="1257AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,1259AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,981AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,1258AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,1107AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"
-													 answerLabels="CONTINUE REGIMEN,CHANGE REGIMEN,DOSING CHANGE,CHANGE FORMULATION,NONE"
-													 style="dropdown"
 
 
-												/>
-
-											</td>
 										</tr>
 									</obsgroup>
 								</template>
@@ -141,104 +132,16 @@
 						<div id="whoChild">
 							<table>
 								<tr>
-									<td><strong>Child</strong><obs conceptId="5356AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA" answerConceptIds="1220AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,1221AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,1222AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA," style="dropdown" answerLabels="WHO Stage1,WHO Stage2,WHO Stage3,WHO Stage4" /></td>
+									<td><strong>Child</strong><obs conceptId="5356AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA" answerConceptIds="1220AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,1221AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,1222AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,1223AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA" style="dropdown" answerLabels="WHO Stage1,WHO Stage2,WHO Stage3,WHO Stage4" /></td>
 								</tr>
 							</table>
 						</div>
 					</td>
 				</tr>
-				<tr>
-					<!--greencard additions physical examination findings -->
-
-					<td>Physical examination*:</td>
-					<td>
-
-						<obs conceptId="162737AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"
-							 answerConceptIds="136443AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,460AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,5334AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,5245AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,"
-							 style="dropdown" answerLabels="Jaundice,Oedema,Thrush,Pallor"  /><br/>
-
-					</td>
-					<!--greencard additions physical examination findings -->
-				</tr>
 			</table>
 		</fieldset>
-		<!-- greencard additions LAbs -->
-		<!--<fieldset>
-			<legend>Laboratory* </legend>
-			<table>
-				<tr>
-					<td>Lab Name:</td>
-					<td>
-						<obs conceptId="1271AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"/>
-
-						Order reason:
-						&lt;!&ndash; missing question id &ndash;&gt;
-						<obs conceptId="160288AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"
-							 answerConceptIds="162080AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,160523AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,161256AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,151685AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,5622AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"
-							 answerLabels="Baseline,Routine,Confirmatory,Suspected Drug Resistance,Other,"
-							 style="dropdowm"  />
-
-						Order date:
-						<obs id="lab-order-date" conceptId="162078AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA" allowFutureDates="true" />
-					</td>
-
-				</tr>
-				<tr>
-					<td>Laboratory Notes:</td>
-
-					<td>
-						<obs conceptId="159395AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA" rows="5" cols="75" /> </td>
-				</tr>
-				&lt;!&ndash; .pw greencard additions LAbs &ndash;&gt;
-				&lt;!&ndash; .pw greencard additions Antigen today vaccination &ndash;&gt;
-			</table>
-		</fieldset>-->
 		<fieldset>
-			<legend>Antigen today*</legend>
-		<table>
-			<tr>
-				<td>Vaccine</td>
-				<td>Vaccine Stage</td>
-				<td>Vaccination Date</td>
-			</tr>
-			<repeat>
-				<template>
-					<obsgroup groupingConceptId="121764AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA">
-						<tr>
-							<td>
-								<obs conceptId="1198AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA" answerConceptIds="36AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,783AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,886AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,1423AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,82215AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,162342AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"
-									 style="dropdown"
-									 answerLabels="Measles,Polio,BCG,Penta,PV,PCV"  />
-
-							</td>
-							<td>
-								<select>
-									<option value="Select">Select</option>
-									<option value="Stage1">Stage1</option>
-									<option value="Stage2">Stage2</option>
-									<option value="Stage3">Stage3</option>
-									<option value="Stage4">Stage4</option>
-								</select>
-							</td>
-							<td>
-								<obs id="vaccination-date" conceptId="1410AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA" allowFutureDates="true" />
-							</td>
-
-						</tr>
-					</obsgroup>
-				</template>
-				<render n="1" concept=" " />
-				<render n="2" concept=" " />
-				<render n="3" concept=" " />
-				<render n="4" concept=" " />
-				<render n="5" concept=" " />
-			</repeat>
-		</table><hr/>
-			</fieldset>
-		<!-- .pw greencard additions Antigen today vaccination -->
-
-		<fieldset>
-			<legend>Cotrimoxazole/Dapsone</legend>
+			<legend>Cotrimoxazole</legend>
 			<table>
 				<tr>
 					<td>
@@ -251,7 +154,7 @@
 											answerConceptIds="159405AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,159406AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,159407AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"
 											answerLabels="Good (G),Fair (F),Poor (P)"
 											style="radio"
-									/>
+											/>
 								</td>
 							</tr>
 							<tr>
@@ -262,7 +165,7 @@
 											answerConceptIds="1065AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,1066AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,1175AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"
 											answerLabels="Yes,No,Not applicable (N/A)"
 											style="radio"
-									/>
+											/>
 								</td>
 							</tr>
 						</table>
@@ -285,7 +188,7 @@
 											answerConceptIds="159405AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,159406AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,159407AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"
 											answerLabels="Good (G),Fair (F),Poor (P)"
 											style="radio"
-									/>
+											/>
 								</td>
 							</tr>
 						</table>
@@ -308,27 +211,14 @@
 					</td>
 				</tr>
 				<tr>
-					<td>Return Visit Date/ Differenciated Care*:</td>
-					<td><obs conceptId="5096AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA" allowFutureDates="true" labelText=" " id="returnVisitDate" />
-						Reason*:
-						<obs conceptId="160288AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"
-							 answerConceptIds="160523AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,1283AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,159382AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,160521AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,5622AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"
-							 answerLabels="Follow up,Lab tests,Counseling,Pharmacy Refill,Other,"
-							 style="dropdowm"  />
-						Differentiated Care*
-						<obs conceptId="164181AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"
-							 answerConceptIds="163510AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,159832AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,1751AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"
-							 answerLabels="Standard,Express,Community Dispensing"
-							 style="dropdowm"  />
-					</td>
-
+					<td>Return Visit Date:</td>
+					<td><obs conceptId="5096AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA" allowFutureDates="true" labelText=" " id="returnVisitDate" required="true" /> </td>
 				</tr>
-
 			</table>
 		</fieldset>
 
 		<fieldset >
-			<legend>Population type</legend>
+			<legend>At Risk Population</legend>
 			<table>
 				<tr>
 					<td valign="top">Is the client a member of at-risk population?</td>
