--- a/omod/src/main/webapp/resources/htmlforms/hiv/hivFamilyHistory.html
+++ b/omod/src/main/webapp/resources/htmlforms/hiv/hivFamilyHistory.html
@@ -99,7 +99,7 @@
                 <th align="left">Relationship Status</th>
                 <!--<th align="left">Date</th>-->
                 <th align="left">Baseline HIV Status</th>
-                <th align="left">New Test Date</th>
+                <th align="left">Test Date</th>
                 <th align="left">HIV Result</th>
                 <th align="left">In Care?</th>
                 <th align="left">CCC Number</th>
