family history increased ccc_no size

--- a/omod/src/main/webapp/resources/htmlforms/hiv/hivFamilyHistory.html
+++ b/omod/src/main/webapp/resources/htmlforms/hiv/hivFamilyHistory.html
@@ -153,7 +153,7 @@
                                      style="dropdown" answerLabels="YES,NO,UNKNOWN"/>
                             </td>
                             <td>
-                                <obs class="ccc-no" conceptId="162053AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA" labelText="" />
+                                <obs class="ccc-no" conceptId="162053AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA" labelText="" size ="15"/>
                             </td>
                             <td>
                                 <obs class="referring-facility" conceptId="162724AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA" labelText=""/>
